@@ -139,6 +139,10 @@ Extra-Source-Files:
   tests/IntegrationTests/new-build/T3978/cabal.project
   tests/IntegrationTests/new-build/T3978/p/p.cabal
   tests/IntegrationTests/new-build/T3978/q/q.cabal
+  tests/IntegrationTests/new-build/T4017.sh
+  tests/IntegrationTests/new-build/T4017/cabal.project
+  tests/IntegrationTests/new-build/T4017/p/p.cabal
+  tests/IntegrationTests/new-build/T4017/q/q.cabal
   tests/IntegrationTests/new-build/executable/Main.hs
   tests/IntegrationTests/new-build/executable/Setup.hs
   tests/IntegrationTests/new-build/executable/Test.hs
