@@ -1,0 +1,3 @@
+. ./common.sh
+cd T4017
+cabal new-build q
