@@ -1,0 +1,2 @@
+packages: p q
+allow-older: p:base
